Fix layout issues in board page: adjust gap in kanban, ensure card container width is consistent, and set aspect ratio for initials

--- a/src/app/features/board/page/board-page/board-page.component.scss
+++ b/src/app/features/board/page/board-page/board-page.component.scss
@@ -60,7 +60,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    gap: clamp(5px, calc(5px + (100vw - 1220px)), 26px);
+    gap: clamp(5px, calc(5px + (100vw - 1220px)), 16px);
     padding: 0px clamp(10px, calc(10px + (100vw - 1220px)), 64px);
 
     &__container {
@@ -139,7 +139,8 @@
     gap: 24px;
     filter: drop-shadow(var(--drop-shadow));
     cursor: grab;
-
+    max-width: 252px;
+    width: 100%;
   }
   &__card-category {
     padding: 4px 16px;
@@ -182,6 +183,8 @@
   }
   &__card-container-initials {
     display: flex;
+    width: 100px;
+    overflow: hidden;
   }
   &__card-initials {
     background: red;
@@ -191,6 +194,7 @@
     color: var(--white);
     height: 32px;
     width: 32px;
+    aspect-ratio: 1 / 1;
     border-radius: 100%;
     border: solid 1px var(--white);
     margin-left: -10px;
